--- a/back.html
+++ b/back.html
@@ -290,7 +290,7 @@
             let currentDate = new Date();
             let selectedDate = null;
             let timeData = {};
-            let settings = { theme: 'default', background: 'none', payPeriod: 14 };
+            let settings = { theme: 'Sakura', background: 'petals', payPeriod: 14 };
             let modalHourType = 'CORE';
             let onConfirmCallback = null;
             let notificationTimeout;
