--- a/index.html
+++ b/index.html
@@ -304,15 +304,6 @@
             // --- HELPER FUNCTIONS ---
             function getDateString(date) { return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`; }
             function getExactTime(date) { return `${String(date.getHours()).padStart(2, '0')}:${String(date.getMinutes()).padStart(2, '0')}`; }
-            function roundTimeString(timeString) {
-                if (!timeString) return '';
-                const [hours, minutes] = timeString.split(':').map(Number);
-                const totalMinutes = hours * 60 + minutes;
-                const roundedMinutes = Math.round(totalMinutes / 15) * 15;
-                const newHours = Math.floor(roundedMinutes / 60) % 24;
-                const newMinutes = roundedMinutes % 60;
-                return `${String(newHours).padStart(2, '0')}:${String(newMinutes).padStart(2, '0')}`;
-            }
             function getDayWithSuffix(d) {
                 const day = d.getDate();
                 if (day > 3 && day < 21) return day + 'th';
@@ -485,36 +476,85 @@
             }
             
             function generateAndShowTimesheet() {
-                showNotification("Times have been rounded to the nearest quarter hour.");
+                showNotification("Daily totals have been rounded to the nearest quarter hour.");
                 const today = new Date();
                 const periodStartDate = new Date();
                 periodStartDate.setDate(today.getDate() - (settings.payPeriod - 1));
+
                 let timesheetLines = [];
-                let acapTotal = 0;
-                let coreTotal = 0;
-                for (let d = new Date(periodStartDate); d <= today; d.setDate(d.getDate() + 1)) {
-                    const dateStr = getDateString(d);
+                let grandTotalCore = 0;
+                let grandTotalAcap = 0;
+                let grandTotalAdditional = 0;
+
+                // Helper to get a breakdown of unrounded hours for a day.
+                function calculateHoursBreakdown(dateStr) {
                     const entry = timeData[dateStr];
-                    const dayOfWeek = d.toLocaleDateString('en-US', { weekday: 'short' });
-                    const month = d.toLocaleDateString('en-US', { month: 'short' });
-                    const dayWithSuffix = getDayWithSuffix(d);
-                    let baseLine = `${dayOfWeek} ${dayWithSuffix} - ${month}`;
-                    if (entry && entry.sessions && entry.sessions.length > 0) {
-                        entry.sessions.forEach(session => {
-                            if(session.in && session.out) {
-                                const roundedIn = roundTimeString(session.in);
-                                const roundedOut = roundTimeString(session.out);
-                                const sessionHours = (new Date(`${dateStr}T${roundedOut}`) - new Date(`${dateStr}T${roundedIn}`)) / 3600000;
-                                if (sessionHours > 0) {
-                                    timesheetLines.push(`${baseLine} ${roundedIn} - ${roundedOut} ${sessionHours.toFixed(2)} ${session.type}`);
-                                    if (session.type === 'ACAP') acapTotal += sessionHours;
-                                    else coreTotal += sessionHours;
+                    if (!entry) return { core: 0, acap: 0, additional: 0, total: 0 };
+                    let coreHours = 0, acapHours = 0;
+                    if (entry.sessions) {
+                        entry.sessions.forEach(s => {
+                            if (s.in && s.out) {
+                                const i = new Date(`${dateStr}T${s.in}`);
+                                const o = new Date(`${dateStr}T${s.out}`);
+                                if (o > i) {
+                                    const duration = (o - i) / 3600000;
+                                    if (s.type === 'ACAP') acapHours += duration;
+                                    else coreHours += duration;
                                 }
                             }
                         });
-                    } else if (d.getDay() === 0 || d.getDay() === 6) { timesheetLines.push(`${baseLine} - Closed`); }
+                    }
+                    const additional = entry.additional || 0;
+                    return { core: coreHours, acap: acapHours, additional: additional, total: coreHours + acapHours + additional };
                 }
-                const summaryLines = [ '\nHere is the summary:\n', `ACAP total: ${acapTotal.toFixed(2)} hours`, `Core total: ${coreTotal.toFixed(2)} hours`, `\nTotal: ${(acapTotal + coreTotal).toFixed(2)} hours` ];
+
+                for (let d = new Date(periodStartDate); d <= today; d.setDate(d.getDate() + 1)) {
+                    const dateStr = getDateString(d);
+                    const dayOfWeek = d.toLocaleDateString('en-US', { weekday: 'short' });
+                    const month = d.toLocaleDateString('en-US', { month: 'short' });
+                    const dayWithSuffix = getDayWithSuffix(d);
+                    let baseLine = `${dayOfWeek} ${dayWithSuffix} - ${month}`.padEnd(16, ' ');
+
+                    const dailyBreakdown = calculateHoursBreakdown(dateStr);
+                    const unroundedTotal = dailyBreakdown.total;
+
+                    if (unroundedTotal > 0) {
+                        const roundedTotal = Math.round(unroundedTotal * 4) / 4;
+
+                        // Apply the rounding adjustment proportionally to maintain the breakdown
+                        const roundingFactor = unroundedTotal > 0 ? roundedTotal / unroundedTotal : 1;
+                        const adjustedCore = dailyBreakdown.core * roundingFactor;
+                        const adjustedAcap = dailyBreakdown.acap * roundingFactor;
+                        const adjustedAdditional = dailyBreakdown.additional * roundingFactor;
+
+                        grandTotalCore += adjustedCore;
+                        grandTotalAcap += adjustedAcap;
+                        grandTotalAdditional += adjustedAdditional;
+
+                        let line = `${baseLine} | Total: ${roundedTotal.toFixed(2)}h`;
+                        let breakdownParts = [];
+                        if (adjustedCore > 0) breakdownParts.push(`CORE: ${adjustedCore.toFixed(2)}h`);
+                        if (adjustedAcap > 0) breakdownParts.push(`ACAP: ${adjustedAcap.toFixed(2)}h`);
+                        if (adjustedAdditional > 0) breakdownParts.push(`Add'l: ${adjustedAdditional.toFixed(2)}h`);
+
+                        if (breakdownParts.length > 0) {
+                            line += ` (${breakdownParts.join(', ')})`;
+                        }
+                        timesheetLines.push(line);
+                    } else if (d.getDay() === 0 || d.getDay() === 6) {
+                        timesheetLines.push(`${baseLine} | Closed`);
+                    }
+                }
+
+                const finalGrandTotal = grandTotalCore + grandTotalAcap + grandTotalAdditional;
+                const summaryLines = [
+                    '\nHere is the summary:\n',
+                    `ACAP total: ${grandTotalAcap.toFixed(2)} hours`,
+                    `Core total: ${grandTotalCore.toFixed(2)} hours`,
+                    `Additional total: ${grandTotalAdditional.toFixed(2)} hours`,
+                    `\nTotal: ${finalGrandTotal.toFixed(2)} hours`
+                ];
+
                 timesheetOutput.value = timesheetLines.join('\n') + summaryLines.join('\n');
                 timesheetModal.classList.add('active');
             }
